# HastyCompute

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.txt  hastyConfig.cmake  vcpkg.json  vcpkg.json.txt
lib/: device.hpp  device.ixx  export.hpp  hasty.hpp  hasty.ixx  hasty_compute.ixx  hasty_cu.ixx  hasty_util.ixx  hdf5.cpp  hdf5.ixx  metadata.ixx  torch_util.cpp  torch_util.hpp  torch_util.ixx
lib/FFI/: batch_sense.cpp  batch_sense.hpp  cs.cpp  cs.hpp  ffi.cpp  ffi.hpp  ffi_defines.hpp  nufft.cpp  nufft.hpp  tests1.cpp  tests1.hpp
lib/FFI/tests/: tests1.cpp  tests1.hpp  tests2.hpp
lib/cs/: batch_sense.cpp  batch_sense.hpp  block.hpp  cg.cpp  cg.hpp  cg_cu.cpp  cg_cu.hpp  llr.cpp  llr.hpp  llr_cu.cpp  llr_cu.hpp  sense.cpp  sense.hpp  sense_cu.cpp  sense_cu.hpp  svt.cpp  svt.hpp
lib/expr/: expr.cpp  expr.ixx  symbolic.ixx
lib/expr/algebra/: token_algebra.ixx
lib/expr/algebra/binary/: add.ixx  div.ixx  mul.ixx  pow.ixx  sub.ixx
lib/expr/algebra/unary/: neg.ixx  trig.ixx  unary.ixx
lib/expr/parser/: defaultexp.ixx  lexer.ixx  shunter.ixx  token.ixx
lib/fft/: dct.cpp  dct.hpp  dct.ixx  fft.cpp  fft.hpp  fft.ixx  fft_cu.cpp  fft_cu.ixx  nufft.cpp  nufft.hpp  nufft.ixx  nufft_cu.cpp  nufft_cu.hpp
lib/linalg/: permute.ixx  permute_cu.ixx  solver.ixx  solver_cu.ixx
lib/mri/: batch_cg.cpp  batch_cg.hpp  batch_cg.ixx  batch_sense.cpp  batch_sense.hpp  batch_sense.ixx  block.hpp  block.ixx  dcf.ixx  flowmri.ixx  precond.cpp  precond.hpp  precond.ixx  sense.cpp  sense.hpp  sense.ixx  stacked_equal.cpp  stacked_equal.hpp  svt.cpp  svt.ixx
lib/nlsq/: nlsq.ixx  nlsq_symbolic.ixx
lib/op/: fftop.cpp  fftop.hpp  fftop.ixx  mriop.cpp  mriop.hpp  mriop.ixx  op.cpp  op.hpp  op.ixx  opalgebra.cpp  opalgebra.hpp  opalgebra.ixx  opalgs.cpp  opalgs.hpp  opalgs.ixx  proxop.cpp  proxop.hpp  proxop.ixx  svt.cpp  svt.ixx  vec.cpp  vec.hpp  vec.ixx
lib/tests/: tests1.cpp  tests1.hpp  tests2.cpp  tests2.hpp
lib/threading/: thread_pool.cpp  thread_pool.hpp  thread_pool.ixx
playground/: anova_test.m  toep_tests.asv  toep_tests.m
python/: enc_to_vel.py  load_h5.py  plot_utility.py  py_interface.cpp  py_interface.hpp  run_framed_recon.py  test_py_interface.py  test_torchkbnufft.py  torch_kbnufft1.ipynb  torch_kbnufft2.ipynb  torch_tests.py
python/cpp/: py_batched_sense.cpp  py_batched_sense.hpp  py_flowmri.cpp  py_flowmri.hpp  py_interface.cpp  py_interface.hpp  py_nufft.cpp  py_nufft.hpp  py_sense.cpp  py_sense.hpp  py_svt.cpp  py_svt.hpp  py_util.hpp
python/hastypy/: reconstruct_full_simulated.py  simulate_mri.py  torch_grad_methods.py  torch_linop.py  torch_precond.py  view_real_results.py  view_results.py
python/hastypy/base/: base.py  coil_est.py  load_and_gate.py  nufft.py  opalg.py  proximal.py  recon.py  sense.py  solvers.py  svt.py  torch_opalg.py
python/hastypy/ffi/: hasty_interface.py  hasty_nufft.py  hasty_svt.py
python/hastypy/tests/: base_test.py
python/python/: batched_senses.py  enc_to_vel.py  image_creation.py  load_h5.py  on_compile_fail.cu  plot_utility.py  recon_linops.py  reconstruct.py  reconstruct_full.py  reconstruct_full2.py  reconstruct_full3.py  reconstruct_full_real.py  reconstruct_full_simulated.py  reconstruct_test.py  reconstruct_util.py  run_framed_recon.py  search_step_4_0_9_f_enc_vel_f.cu  second_order_levenberg_marquardt_4_0_9_f_enc_vel_fgradf.cu  simulate_mri.py  simulate_runner.py  test_svt.py  torch_basics.py  torch_cg.py  torch_grad_methods.py  torch_iterative_alg.py  torch_linop.py  torch_maxeig.py  torch_precond.py  torch_smaps.py  torch_solvers.py  view_real_results.py  view_results.py
python/python/base/: hasty_base.py  hasty_recon.py  hasty_sense.py
python/python/ffi/: hasty_nufft.py  hasty_sense.py
python/python/hastypy/: reconstruct_util.py  view_results.py
python/python/hastypy/base/: coil_compress.py  coil_est.py  enc_to_vel.py  load_and_gate.py  nufft.py  opalg.py  proximal.py  recon.py  sense.py  solvers.py  svt.py  torch_precond.py  util.py
python/python/hastypy/ffi/: hasty_ffi.py  hasty_interface.py  hasty_nufft.py  hasty_sense.py  hasty_svt.py
python/python/hastypy/opt/cuda/: linalg.py  lsq.py  lsqnonlin.py  permute.py  resample.py  smooth_l0.py  solver.py  symbolic.py
python/python/hastypy/opt/cuda/fourier/: fourier.py
python/python/hastypy/opt/cuda/sigpy/: dcf.py  (+6 more)
python/python/hastypy/runners/: run_enc_to_vel.py  run_framed_recon.py  run_simulate_mri.py  run_simulated.py  toeplitz.py
python/python/hastypy/runners/garpen_wahlin/: garpen_runner.py  run_enc_to_vel_garpen.py  run_garpen.py  run_h5.py  run_wahlin.py
python/python/hastypy/tests/: base_test.py  myorthoslicer.py  test.py  test_coilcompress.py  test_gridding.py  test_nufft.py  test_precond.py  test_pu.py
python/python/hastypy/tests/ffi_tests/: hasty_py_interface_nufft.py  hasty_py_interface_test_hi.py
python/python/hastypy/tests/toepbuilder/: toep_builder.py  toep_builder2.py
python/python/hastypy/util/: image_creation.py  plot_utility.py  simulate_mri.py
python/python/hastypy/visualizer/: testgui.py
python/python/kbnufft/: toep_tests.py  torch_kbnufft1.ipynb  torch_kbnufft2.ipynb
python/python/small_tests/: gradient_test.py  hasty_py_interface_nufft.py  hasty_py_interface_test.py  hasty_py_interface_test_hi.py  nufft_inv_test.py  remainder_test.py  small_torch_test.py  test_py_interface.py  toep_builder.py  toep_builder2.py  toep_builder3.py  torch_dll_load.py  torch_tests.py
python/python/symengine/: test_sym.py
python/python/tests/: test_util.py
python/python/tests/ffi_tests/: hasty_py_interface_test_bs.py
python/python/tests/toepbuilder/: toep_builder2.py  zero_shifted_adjnufft.py
tests/: py_test.cpp  py_test.hpp  sigpy_equiv.py  test.cpp  test.ixx
viz/: orthoslicer.cpp  orthoslicer.hpp  skia.cpp  skia.hpp  slicer.cpp  slicer.hpp  viz.cpp  viz_ol.cpp  vizapp.cpp  vizapp.hpp
viz/base/: VulkanBase.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFrameBuffer.hpp  VulkanTexture.cpp  VulkanTexture.hpp  VulkanTools.cpp  VulkanTools.hpp
